fixed error in image display

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
             <div class="feature col pt-5 mt-5">
                 <div class="d-inline-flex align-items-center justify-content-center fs-2 mt-5 pt-4">
-                    <img src="./assets/img/lieu.jpg" class="card-img-top rounded-3" alt="...">
+                    <img src="./assets/img/lieu.JPG" class="card-img-top rounded-3" alt="...">
                 </div>
             </div>
         </div>
