modified cover image and Title

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             </div>
         </nav>
 
-        <div class=" d-flex justify-content-center align-items-end mt-4 pt-5">
+        <div class=" d-flex justify-content-center align-items-end">
             <div class="">
                 <img src="./assets/img/Meggybelly.jpg" alt="" class="img-fluid hero-img_mobile">
-                <img src="./assets/img/cover_6.png" alt="" class="img-fluid hero-img_desktop">
+                <img src="./assets/img/cover_6b.png" alt="" class="img-fluid hero-img_desktop">
             </div>
             <div class="hero-header position-absolute text-center pb-2 blur container-fluid">
                 <h1 class="hero-header_1 text-white title ">Cours de danse orientale<br>avec Meggy</h1>
