minor changes to UI (CTA border/color)

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="hero-header position-absolute text-center pb-4 blur container-fluid">
                 <h1 class="hero-header_1 text-white title ">Cours de danse orientale<br>avec Meggy</h1>
                 <h2 class="hero-header_2 text-white subtitle">Niveau débutant</h2>
-                <p class="hero-header_cta mt-4"><a href="#cours" class="text-white cta text-decoration-none">Découvrir</a></p>
+                <p class="hero-header_cta mt-4"><a href="#cours" class="text-white cta text-decoration-none border-white">Découvrir</a></p>
                 <p class="hero-header_mobile-cta text-white cta-hero_mobile mt-2 mb-5">Découvrir</p>
             </div>
         </div>
@@ -100,7 +100,7 @@
 
             <div class="feature col">
                 <div class="d-inline-flex align-items-center justify-content-center fs-2 mb-3">
-                    <img src="./assets/img/adultes.jpg" class="card-img-top rounded-3" alt="...">
+                    <img src="./assets/img/adultes.jpg" class="card-img-top rounded-3" alt="Cours de danse orientale pour adultes à Paris">
                 </div>
                 <div>
                     <h3 class="fs-4 fw-semibold text-body-emphasis py-2">Cours adultes</h3>
@@ -141,7 +141,7 @@
 
             <div class="feature col">
                 <div class="d-inline-flex align-items-center justify-content-center fs-2 mb-3">
-                    <img src="./assets/img/essai.jpg" class="card-img-top rounded-3" alt="...">
+                    <img src="./assets/img/essai.jpg" class="card-img-top rounded-3" alt="Danseuse orientale">
                 </div>
                 <div>
                     <h3 class="fs-4 fw-semibold text-body-emphasis py-2">Cours d'essai</h3>
