--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <img src="./assets/img/Meggybelly.jpg" alt="MeggyBelly, professeur de danse orientale" class="vh-100 hero-img_mobile">
                 <img src="./assets/img/cover_6b.png" alt="MeggyBelly, professeur de danse orientale" class="vh-100 hero-img_desktop">
             </div>
-            <div class="hero-header position-absolute text-center pb-4 blur container-fluid">
+            <div class="hero-header position-absolute text-center pb-5 mb-5 blur container-fluid">
                 <h1 class="hero-header_1 text-white title ">Cours de danse orientale<br>avec Meggy</h1>
                 <h2 class="hero-header_2 text-white subtitle">Niveau débutant</h2>
                 <p class="hero-header_cta mt-4"><a href="#cours" class="text-white cta text-decoration-none border-white">Découvrir</a></p>
