changed CTA text decoration and color

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <h1 class="hero-header_1 text-white title ">Cours de danse orientale<br>avec Meggy</h1>
                 <h2 class="hero-header_2 text-white subtitle">Niveau débutant</h2>
                 <p class="hero-header_cta mt-4"><a href="#cours" class="text-white cta text-decoration-none border-white">Découvrir</a></p>
-                <p class="hero-header_mobile-cta text-white cta-hero_mobile mt-2 mb-5 border-white"><a href="#cours">Découvrir</a></p>
+                <p class="hero-header_mobile-cta cta-hero_mobile mt-2 mb-5 border-white"><a href="#cours" class="text-decoration-none text-white">Découvrir</a></p>
             </div>
         </div>
     </header>
